# geonkick

./: .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS  Makefile  NEWS  NEWS.md  README.md  clock.h  dsadsadsa.gkick  envelope.h  geonkick.pro  main.c  oscilator.h  q
api/: Makefile  api.pro
data/: CMakeLists.txt  README  geonkick.desktop  geonkick.xml
data/design/: knob_bk_image.xcf
doc/: CMakeLists.txt  Documentation.md  Geonkick_User_Guide.md
doc/examples/: Kick-1_5_2.gkick  README
doc/man/: geonkick.1
doxygen/: Doxyfile
dsp/: CMakeLists.txt
dsp/src/: audio_output.c  audio_output.h  compressor.c  compressor.h  distortion.c  distortion.h  envelope.c  envelope.h  filter.c  filter.h  geonkick.c  geonkick.h  geonkick_internal.h  gkick_audio.c  gkick_audio.h  gkick_buffer.c  gkick_buffer.h  gkick_jack.c  gkick_jack.h  gkick_log.c  gkick_log.h  mixer.c  mixer.h  oscillator.c  oscillator.h  presets_folder.h  synthesizer.c  synthesizer.h  worker.c  worker.h
examples/: Crash_Long.gkick  Hi-Hat-1.0.gkick  Hit-Hat.gkick  Kick-1.0.gkick  Kik-1_5_1.gkick  Shakers-1.0.gkick  Snare-1.0.gkick  Snare-1_5.gkick
geonkick/: Makefile  log.txt
gui/: #MainWindow.ui#  #envelope_point.cpp#  #gkick_envelope.cpp#  #gkick_envelope_widget.cpp#  #log.txt#  #oscillator_envelope.cpp#  .#MainWindow.ui  .#gkick_envelope.cpp  .#gkick_envelope_widget.cpp  .#oscillator_envelope.cpp  .qmake.stash  MainWindow.ui  Makefile  compressor_group_box.cpp  compressor_group_box.h  control_area.cpp  control_area.h  control_group_box.cpp  control_group_box.h  distortion_group_box.cpp  distortion_group_box.h  effects_group_box.cpp  effects_group_box.h  envelope.cpp  envelope.h  envelope_draw_area.cpp  envelope_draw_area.h  envelope_point.cpp  envelope_point.h  envelope_widget.cpp  envelope_widget.h  envelopes_group_box.cpp  envelopes_group_box.h  export_widget.cpp  export_widget.h  fader.cpp  fader.h  general_envelope.cpp  general_envelope.h  general_group_box.cpp  (+57 more)
lv2/: CMakeLists.txt  Makefile  MakefileBk  geonkick.c  geonkick.h  geonkick.ttl  geonkick_lv2.c  geonkick_lv2.cpp  geonkick_lv2.h  geonkick_lv2_ui.cpp  libgeonkick_lv2.so.1.0  lv2.pro  manifest.ttl
lv2/geonkick.lv2/: geonkick.ttl  manifest.ttl
lv2/lv2/geonkick.lv2/: geonkick.ttl
misc/: example_kick.json
plugin/: CMakeLists.txt
plugin/lv2/: CMakeLists.txt  geonkick_lv2.cpp
plugin/lv2/geonkick.lv2/: geonkick.ttl  manifest.ttl
plugin/vst/: CMakeLists.txt  GKickController.cpp  GKickController.h  GKickProcessor.cpp  GKickVstController.cpp  GKickVstController.h  GKickVstEditor.cpp  GKickVstEditor.h  GKickVstProcessor.cpp  GKickVstProcessor.h  GKickVstcontroller.h  VstFactory.cpp  VstIds.h  controller_vst.cpp  controller_vst.h  factory_vst.cpp  ids_vst.h  info.rc  processor_vst.cpp  processor_vst.h
presets/: AVL-Drumkit.tar.xz  BartBrouns.tar.xz  CMakeLists.txt  Crash_Long.gkick  DSoS.tar.xz  DigitalSamba.tar.xz  GeonkickBells.tar.xz  HaraldReveryKicks.tar.xz  Hit-Hat.gkick  Hit-Hat_metalic_1.gkick  Kick-1_5_2.gkick  Kik-1_5_1.gkick  README  SPKickPresetsVol1.tar.xz  Snare-1.5_dist.gkick  Snare-1_5.gkick  Snare-1_6.gkick  TimeKit.tar.xz  UnfaTutorial.tar.xz  kicks.tar.xz
presets/Time Kit-1.0/: AVL-Drumkit.tar.xz  AVL_Drumskits.gkit  Clap.gkick  Hit-Hat-Closed.gkick  Hit-Hat-Open.gkick  Hit-Hat.gkick  Kick.gkick  README  Shaker.gkick  Snare.gkick  SnareT.gkick  TimeKit.gkit
redkite/: CMakeLists.txt  (+3 more)
src/dsp/: CMakeLists.txt
src/dsp/src/: audio_output.c  audio_output.h  compressor.c  distortion.c  distortion.h  envelope.c  envelope.h  filter.c  filter.h  geonkick.c  geonkick.h  geonkick_internal.h  gkick_audio.c  gkick_audio.h  gkick_buffer.c  gkick_buffer.h  gkick_jack.c  gkick_log.h  mixer.c  mixer.h  oscillator.c  oscillator.h  presets_folder.h  ring_buffer.c  ring_buffer.h  synthesizer.c  synthesizer.h  worker.c
src/plugin/lv2/: CMakeLists.txt  geonkick_lv2.cpp
src/plugin/lv2/geonkick.lv2/: geonkick.ttl  manifest.ttl
src/plugin/lv2/geonkick_win.lv2/: geonkick.ttl  manifest.ttl
src/plugin/vst/: CMakeLists.txt  GKickVstEditor.cpp  GKickVstEditor.h  GKickVstProcessor.cpp  GKickVstProcessor.h  VstFactory.cpp  VstIds.h
src/redkite/: CMakeLists.txt  README  README.md  README_old.md
src/redkite/cmake/: FindCairo.cmake
src/redkite/examples/: CMakeLists.txt  action.cpp  child.cpp  dialog.cpp  hello.cpp  label.cpp  lineedit.cpp  painter.cpp  property.cpp  timer.cpp
src/redkite/include/: Rk.h  RkAction.h  RkButton.h  RkCanvas.h  RkColor.h  RkContainer.h  RkContainerItem.h  RkContainerWidgetItem.h  RkEvent.h  RkEventQueue.h  RkFlowContainer.cpp  RkFlowContainer.h  RkFont.h  RkImage.h  RkLabel.h  RkLineEdit.h  RkList.h  RkLog.h  RkMain.h  RkModel.h  RkObject.h  RkObserver.h  RkPainter.h  RkPen.h  RkPlatform.h  RkPoint.h  RkProgressBar.h  RkRealPoint.h  RkRect.h  RkSize.h  RkSpinBox.h  RkTabWidget.h  RkTimer.h  RkTransition.h  RkVariant.h  RkWidget.h
src/redkite/include/impl/: RkButtonImpl.h  RkCairoGraphicsBackend.h  RkCairoImageBackendCanvas.h  RkCanvasInfo.h  RkEventQueueImpl.h  RkGDIImageGraphicsBackend.h  RkGraphicsBackend.h  RkImageImpl.h  RkLabelImpl.h  RkLineEditImpl.h  RkListImpl.h  RkMainImpl.h  RkObjectImpl.h  RkPainterImpl.h  RkProgressBarImpl.h  RkSpinBoxImpl.h  RkSystemWindow.h  RkWidgetImpl.h
src/redkite/src/: RkButton.cpp  RkButtonImpl.cpp  RkCairoGraphicsBackend.cpp  RkCairoImageBackendCanvas.cpp  RkCanvas.cpp  RkContainer.cpp  RkDirect2DGraphicsBackend.cpp  RkEventQueue.cpp  RkEventQueueImpl.cpp  RkFlowContainer.cpp  RkGDIImageGraphicsBackend.cpp  RkImage.cpp  RkImageImpl.cpp  RkLabel.cpp  RkLabelImpl.cpp  RkLineEdit.cpp  RkLineEditImpl.cpp  RkList.cpp  RkListImpl.cpp  RkMain.cpp  RkMainImpl.cpp  RkModel.cpp  RkModelImpl.cpp  RkObject.cpp  RkObjectImpl.cpp  RkPainter.cpp  RkPainterImpl.cpp  RkProgressBar.cpp  RkProgressBarImpl.cpp  RkSpinBox.cpp  RkSpinBoxImpl.cpp  RkSystemWindow.cpp  RkTimer.cpp  RkWidget.cpp  RkWidgetImpl.cpp
src/redkite/tools/: CMakeLists.txt  rkpng2c.c
src/standalone/: CMakeLists.txt  main.cpp
standalone/: CMakeLists.txt  main.cpp  standalone.pro
(+914 files in other folders)
